assets/css/style.css
/*Defined the margin and padding as 0 to negate browser defaults*/
* {
    margin: 0;
    padding: 0;
}

/*Defined height of body and html as 100% so that .not-footer can have a height of 100%, too*/
html, body {
    height: 100%;
}

/*Linked a background image for the body*/
body {
    background-image: url("../images/background.png");
}

/*Defined font family and size for h1*/
h1 {
    font-family: 'Georgia', Times, Times New Roman, serif;
    font-size: 32px;
}

/*Defined font size, color, spacing and family for standard paragraph text
and gave it padding so that it isn't at the edge of .container's border*/
p {
    padding: 0 30px 0 30px;
    font-size: 18px;
    color: #777777;
    line-height: 2;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

.right-link {
    font-size: 18px;
    color: #777777;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    text-decoration: none;
}

#index-link {
    padding-right: 20px;
}

#portfolio-link {
    padding: 0 20px 0 20px;
    border-left: 1px solid #cccccc;
}

#contact-link {
    padding-left: 20px;
    border-left: 1px solid #cccccc;
}

/*Set a minimum height of 100% for the contents above the footer so that
they fill the browser (to help with placing the footer)*/
.not-footer {
    min-height: 100%;
    position: relative;
    margin-bottom: -65px;
}

/*Defined overflow as auto so that a scrollbar is generated if there's too
much content for the browser to display, and added a padding-bottom so
that said content doesn't run into the footer*/
.not-footer-contents {
    overflow: auto;
}

/*Have checked all code and made sure it serves a purpose up to this point*/
header {
    bottom: auto;
    width: 100%;
    background: #ffffff;
    overflow: hidden;
    border-bottom: 2px solid #cccccc;
    margin-bottom: 40px;
}

.header-text {
    width: 960px;
    margin: auto;
}

.header-heading-container {
    float: left;
    position: relative;
    top: 25px;
}

.header-heading {
    font-family: 'Georgia', Times, Times New Roman, serif;
    background-color: #4aaaa5;
    height: 92px;
    padding: 100% 30px 35px 30px;
    color: #ffffff;
}

.header-right {
    list-style: none;
    float: right;
    height: 54px;
    padding-top: 36px;
}

.header-link {
    display: inline-block;
}

/*Centered the container while keeping its position absolute by giving
it a left value of 50% and a left margin equal to negative half its width*/
.container {
    width: 960px;
    margin: auto;
    padding-bottom: 20px;
    background-color: #ffffff;
    border: 2px solid #dddddd;
    left: 50%;
    top: 70px;
}

.h1-below {
    padding: 30px 0 30px 0;
    color: #4aaaa5;
    border-bottom: 3px solid #dddddd;
    margin: 0 30px 30px 30px;
}

#profile-picture {
    padding: 9px 30px 0 30px;
    float: left;
}

.push {
    height: 160px;
}

footer {
    background: #666666;
    clear: both;
    border-top: 7px solid #4aaaa5;
    height: 65px;
}

.copyright {
    text-align: center;
    font-size: 12px;
    color: #dddddd;
    margin-top: 38px;
}

.row {
    padding: 12px 0 38px 0;
}

.portfolio-project {
    padding: 0 30px;
    position: relative;
}

.project-container{
    width: 200px;
    position: relative;
    display: inline-block;
    margin-right: 150px;
}

.project-title {
    text-align: center;
    margin-left: 30px;
    padding: 20px 0;
    width: 300px;
    text-align: center;
    color: #ffffff;
    background-color: #4aaaa5;
    position: absolute;
    bottom: 15px;
    z-index: 1;
}

#contact-form-container {
    padding: 0 0 0 30px;
}

#contact-form {
    font-size: 20px;
    color: #777777;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    line-height: 2;
}

input, textarea {
    color: #777777;
    font-size: 18px;
    width: 876px;
    line-height: 2;
    padding: 0 12px;
    border: 2px solid #dddddd;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

#form-message {
    height: 252px;
    resize: none;
}

#form-submit {
    padding: 15px 40px;
    margin-bottom: 12.5px;
    background-color: #4aaaa5;
    color: #ffffff;
    font-size: 20px;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

.clearfix::after {
    content: "";
    display: block;
    height: 0;
    clear: both;
}

